--- a/README.html
+++ b/README.html
@@ -26,9 +26,13 @@
 <li>Hamburger CSS</li>
 <li>MagnificPopup</li>
 <li>Sweetalert</li>
+<li>FontAwesome</li>
+<li>Google Material Icons</li>
+<li>HoverCSS</li>
+<li>socialColors</li>
+<li>MMenu</li>
+<li>clipboardJS</li>
 </ul>
-
-<h3 id="roadmap">Roadmap</h3>
 
 </body>
 </html>
