--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
 		<script src="js/external/magnificPopup/jquery.magnific-popup.min.js"></script>
 		<!-- Parsley - Form validation on client side. -->
 		<script src="js/external/parsley/parsley.min.js"></script>
-		<!-- Sweetalert -->
+		<!-- Sweetalert - Nice Popups -->
 		<script src="js/external/sweetalert/sweetalert.min.js"></script>
+		<!-- clipboardjs - Copy everything -->
+		<script src="js/external/clipboardjs/clipboard.min.js"></script>
+		<!-- mmenu - The smart mobile menu -->
+		<script src="js/external/mmenu/jquery.mmenu.all.js"></script>
 
 		<!-- Custom JavaScript -->
 		<script src="js/script.js"></script>
