--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 		<script src="js/external/clipboardjs/clipboard.min.js"></script>
 		<!-- mmenu - The smart mobile menu -->
 		<script src="js/external/mmenu/jquery.mmenu.all.js"></script>
+		<!-- isotope - Filter & sort magical layouts -->
+		<script src="js/external/isotope/isotope.js"></script>
+		<!-- CookieConsent - EU CookieLaw Banner -->
+		<script src="js/external/cookieconsent/cookieconsent.js"></script>
 
 		<!-- Custom JavaScript -->
 		<script src="js/script.js"></script>
