Fixed FontAwesome & Google MaterialIcons

--- a/clean-template/index.html
+++ b/clean-template/index.html
@@ -7,13 +7,13 @@
 		<title>jBoilerplate</title>
 
 		<!-- CSS -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="less/style.css">
 	</head>
 	<body>
 
 		<!-- Header + Menu -->
 		<header class="head">
-			[Heder]
+                  [Heder]
 		</header>
 
 		<!-- Content Section -->
@@ -50,7 +50,7 @@
         <!-- Isotopes -->
         <!-- <script src="javascript/external/isotope/isotope.js"></script> -->
         <!-- Cookieconsent -->
-        <script src="javascript/external/cookieconsent/cookiecontent.js"></script>
+        <script src="javascript/external/cookieconsent/cookieconsent.js"></script>
         <!-- ScrollReveal -->
         <script src="javascript/external/scrollreveal/scrollreveal.js"></script>
         <!-- Card -->
