Header & Footer Partial
Added Header & Footer Partial
Added Script.js in HTML
Added Structure.less to CSS

--- a/clean-template/index.html
+++ b/clean-template/index.html
@@ -13,7 +13,7 @@
 
 		<!-- Header + Menu -->
 		<header class="head">
-                  [Heder]
+            Heder]
 		</header>
 
 		<!-- Content Section -->
@@ -55,5 +55,7 @@
         <script src="javascript/external/scrollreveal/scrollreveal.js"></script>
         <!-- Card -->
         <script src="javascript/external/card/jquery.card.js"></script>
+        <!-- Custom Script -->
+        <script src="javascript/script.js"></script>
 	</body>
 </html>
