--- a/clean-template/index.html
+++ b/clean-template/index.html
@@ -10,10 +10,9 @@
 		<link rel="stylesheet" href="less/style.css">
 	</head>
 	<body>
-
 		<!-- Header + Menu -->
 		<header class="head">
-            Heder]
+            [Header]
 		</header>
 
 		<!-- Content Section -->
@@ -23,7 +22,7 @@
 
 		<!-- Footer -->
 		<footer class="footer">
-			[Footer]
+		    [Footer]
         </footer>
 
         <!-- JQuery -->
@@ -34,7 +33,6 @@
         <!-- <script src="javascript/external/bootstrap/bootstrap-3.3.7/bootstrap.js"></script> -->
         <!-- Bootstrap 4.0 -->
         <!-- <script src="javascript/external/bootstrap/bootstrap-4.0/bootstrap.js"></script> -->
-
         <!-- Slick -->
         <script src="javascript/external/slick/slick.js"></script>
         <!-- Parsley -->
